--- a/SSM_Maven5/.settings/org.eclipse.wst.common.component
+++ b/SSM_Maven5/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="SSM_Maven5">
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/" source-path="/target/m2e-jee/web-resources"/>
-        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
         <property name="context-root" value="SSM_Maven5"/>
         <property name="java-output-path" value="/SSM_Maven5/target/classes"/>
     </wb-module>
